--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -26,17 +26,16 @@
 								<li>
 									<a href="#">Dropdown</a>
 									<ul>
-										<li><a href="#">Lorem ipsum dolor</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam dolore nisl</a></li>
+										<li><a href="#">Link</a></li>
+										<li><a href="#">Link</a></li>
+										<li><a href="#">Link</a></li>
 										<li>
-											<a href="#">Phasellus consequat</a>
+											<a href="#">Link</a>
 											<ul>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam dolore nisl</a></li>
-												<li><a href="#">Veroeros feugiat</a></li>
-												<li><a href="#">Nisl sed aliquam</a></li>
-												<li><a href="#">Dolore adipiscing</a></li>
+												<li><a href="#">Link/a></li>
+												<li><a href="#">Link/a></li>
+												<li><a href="#">Link/a></li>
+												<li><a href="#">Link/a></li>
 											</ul>
 										</li>
 										<li><a href="#">Veroeros feugiat</a></li>
