--- a/index.html
+++ b/index.html
@@ -3,190 +3,194 @@
 	SIYAMUZA Designs
 -->
 <html>
-	<head>
-		<title>ruralTech-hub</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body class="homepage is-preload">
-		<div id="page-wrapper">
+<head>
+<title>ruralTech-hub</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+<link rel="stylesheet" href="assets/css/main.css" />
+</head>
+<body class="homepage is-preload">
+<div id="page-wrapper">
+<!-- Header -->
+<section id="header">
 
-			<!-- Header -->
-				<section id="header">
+<!-- Logo -->
+<h1><a href="index.html"><span id="title_head">rural</span>Tech-hub</a></h1>
+<!-- Nav -->
+	<nav id="nav">
+	<ul>
+	<li class="current"><a href="index.html">Home</a></li>
+	<li>
+		<a href="#">courses</a>
+		<ul>
+		<li><a href="#">HTML</a></li>
+		<li><a href="#">CSS</a></li>
+		<li><a href="#">JS</a></li>
+		<li>
+		<a href="#">PYTHON</a>
+		<ul>
+		<li><a href="#">video tutorials</a></li>
+		<li><a href="#">code games</a></li>
+		<li><a href="#">quizes</a></li>
+		<li><a href="#">test</a></li>
+		<li><a href="#">exams</a></li>
+	</ul>
+	</li>
+	<li><a href="#">PHP</a></li>
+	</ul>
+	</li>
+	<li><a href="index.html">About Us</a></li>
+	<li><a href="index.html">News/Updates</a></li>
+	<li><a href="index.html">Sponsors</a></li>
+	<li><a href="index.html">Career Guidance</a></li>
+	<li><a href="index.html">Schools/Events</a></li>
+	</ul>
+	</nav>
 
-					<!-- Logo -->
+	<!-- Banner -->
+	<section id="banner">
+	<header>
+	<h2>GirlCanCode2</h2>
+	<p>Programming is not for boys only, girls can also do it better</p>
+	</header>
+	</section>
 
-						<h1><a href="index.html"><span id="title_head">rural</span>Tech-hub</a></h1>
-
-					<!-- Nav -->
-						<nav id="nav">
-							<ul>
-								<li class="current"><a href="index.html">Home</a></li>
-								<li>
-									<a href="#">courses</a>
-									<ul>
-										<li><a href="#">HTML</a></li>
-										<li><a href="#">CSS</a></li>
-										<li><a href="#">JS</a></li>
-										<li>
-											<a href="#">PYTHON</a>
-											<ul>
-												<li><a href="#">video tutorials</a></li>
-												<li><a href="#">code games</a></li>
-												<li><a href="#">quizes</a></li>
-												<li><a href="#">test</a></li>
-												<li><a href="#">exams</a></li>
-											</ul>
-										</li>
-										<li><a href="#">PHP</a></li>
-									</ul>
-								</li>
-								<li><a href="index.html">About Us</a></li>
-								<li><a href="index.html">News/Updates</a></li>
-								<li><a href="index.html">Sponsors</a></li>
-								<li><a href="index.html">Career Guidance</a></li>
-								<li><a href="index.html">Schools/Events</a></li>
-							</ul>
-						</nav>
-
-					<!-- Banner -->
-						<section id="banner">
-							<header>
-								<h2>GirlCanCode2</h2>
-								<p>Programming is not for boys only, girls can also do it better</p>
-							</header>
-						</section>
-
-					<!-- Intro -->
-						<section id="intro" class="container">
-							<div class="row">
-								<div class="col-4 col-12-medium">
-									<section class="first">
-										<i class="icon solid featured fa-cog"></i>
-										<header>
-											<h2>Get Equipped</h2>
-										</header>
-										<p>Get introduced to latest technologies and explore how devices communicate, you will learn how to create your own TikTok someday</p>
+	<!-- Intro -->
+	<section id="intro" class="container">
+	<div class="row">
+	<div class="col-4 col-12-medium">
+	<section class="first">
+	<i class="icon solid featured fa-cog"></i>
+	<header>
+	<h2>Get Equipped</h2>
+	</header>
+	<p>Get introduced to latest technologies and explore how devices communicate, you will learn how to create your own TikTok someday</p>
+	</section>
+	</div>
+	<div class="col-4 col-12-medium">
+	<section class="middle">
+	<i class="icon solid featured alt fa-bolt"></i>
+	
+	<header>
+	<h2>Build Real Projects</h2>
+	</header>
+	<p>Imagine as you as you are, being able to solve any problem by 
+	    creating systems that simplifies life for your community. 
+	    We are here to pave that way for you</p>
+	</section>
+	</div>
+	<div class="col-4 col-12-medium">
+	<section class="last">
+	<i class="icon solid featured alt2 fa-star"></i>
+	<header>
+	<h2>Be A Star</h2>
+	</header>
+	<p>Not only you will be proud of yourselve, but your family and friends 
+	    someday will be proud of a young smart girl that has made in tech industries</p>
 									</section>
-								</div>
-								<div class="col-4 col-12-medium">
-									<section class="middle">
-										<i class="icon solid featured alt fa-bolt"></i>
-										<header>
-											<h2>Build Real Projects</h2>
-										</header>
-										<p>Imagine as you as you are, being able to solve any problem by creating systems that simplifies life for your community. We are here to pave that way for you</p>
-									</section>
-								</div>
-								<div class="col-4 col-12-medium">
-									<section class="last">
-										<i class="icon solid featured alt2 fa-star"></i>
-										<header>
-											<h2>Be A Star</h2>
-										</header>
-										<p>Not only you will be proud of yourselve, but your family and friends someday will be proud of a young smart girl that has made in tech industries</p>
-									</section>
-								</div>
-							</div>
-							<footer>
-								<ul class="actions">
-									<li><a href="#" class="button large">Get Started</a></li>
-									<li><a href="#" class="button alt large">Learn More</a></li>
-								</ul>
-							</footer>
-						</section>
+	</div>
+	</div>
+	
+	<!-- this is a footer tag-->
 
-				</section>
+	<footer>
+		<ul class="actions">
+		    <li><a href="#" class="button large">Get Started</a></li>
+		    <li><a href="#" class="button alt large">Learn More</a></li>
+		</ul>
+	</footer>
+	</section>
+	</section>
 
-			<!-- Main -->
-				<section id="main">
-					<div class="container">
-						<div class="row">
-							<div class="col-12">
+	<!-- Main -->
+	<section id="main">
+	    <div class="container">
+	    <div class="row">
+	    <div class="col-12">
 
-								<!-- Portfolio -->
-									<section>
-										<header class="major">
-											<h2>My Portfolio</h2>
-										</header>
-										<div class="row">
-											<div class="col-4 col-6-medium col-12-small">
-												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-													<header>
-														<h3>Johannesburg Primary School</h3>
-													</header>
-													<p>Noncebo, Lala and Bongeka will complete this section as soon as they get access to this repo. </p>
-													<footer>
-														<ul class="actions">
-															<li><a href="#" class="button alt">Find out more</a></li>
-														</ul>
-													</footer>
-												</section>
-											</div>
-											<div class="col-4 col-6-medium col-12-small">
-												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-													<header>
-														<h3>Zama-Zama Primary School</h3>
-													</header>
-													<p>Noncebo, Lala and Bongeka will complete this section as soon as they get access to this repo. 
-														<ul class="actions">
-															<li><a href="#" class="button alt">Find out more</a></li>
-														</ul>
-													</footer>
-												</section>
-											</div>
-											<div class="col-4 col-6-medium col-12-small">
-												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-													<header>
-														<h3>Swatsakisa Primary School</h3>
-													</header>
-													<p>Noncebo, Lala and Bongeka will complete this section as soon as they get access to this repo. </p>
-													<footer>
-														<ul class="actions">
-															<li><a href="#" class="button alt">Find out more</a></li>
-														</ul>
-													</footer>
-												</section>
-											</div>
-											<div class="col-4 col-6-medium col-12-small">
-												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-													<header>
-														<h3>Noncebo Private School</h3>
-													</header>
-													<p>Noncebo, Lala and Bongeka will complete this section as soon as they get access to this repo. </p>
-													<footer>
-														<ul class="actions">
-															<li><a href="#" class="button alt">Find out more</a></li>
-														</ul>
-													</footer>
-												</section>
-											</div>
-											<div class="col-4 col-6-medium col-12-small">
-												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-													<header>
-														<h3>WeThinkCode Primary School</h3>
-													</header>
-													<p>Noncebo, Lala and Bongeka will complete this section as soon as they get access to this repo. </p>
-													<footer>
-														<ul class="actions">
-															<li><a href="#" class="button alt">Find out more</a></li>
-														</ul>
-													</footer>
-												</section>
-											</div>
-											<div class="col-4 col-6-medium col-12-small">
-												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
-													<header>
-														<h3>Bongeka Primary School</h3>
-													</header>
-													<p>LNoncebo, Lala and Bongeka will complete this section as soon as they get access to this repo. </p>
+
+		    <!-- Portfolio -->
+		<section>
+		<header class="major">
+		<h2>My Portfolio</h2>
+		</header>
+		<div class="row">
+		<div class="col-4 col-6-medium col-12-small">
+		<section class="box">
+		<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+		<header>
+		<h3>Johannesburg Primary School</h3>
+		</header>
+		<p>Noncebo, Lala and Bongeka will complete this section as soon as they get access to this repo. </p>
+	<footer>
+		<ul class="actions">
+		<li><a href="#" class="button alt">Find out more</a></li>
+		</ul>
+	</footer>
+	</section>
+	</div>
+		<div class="col-4 col-6-medium col-12-small">
+		<section class="box">
+		<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+		<header>
+		<h3>Zama-Zama Primary School</h3>
+		</header>
+		<p>Noncebo, Lala and Bongeka will complete this section as soon as they get access to this repo. 
+		<ul class="actions">
+		<li><a href="#" class="button alt">Find out more</a></li>
+		</ul>
+	</footer>
+	</section>
+	</div>
+		<div class="col-4 col-6-medium col-12-small">
+		<section class="box">
+		<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+	<header>
+		<h3>Swatsakisa Primary School</h3>
+		</header>
+		<p>Noncebo, Lala and Bongeka will complete this section as soon as they get access to this repo. </p>
+	<footer>
+		<ul class="actions">
+		<li><a href="#" class="button alt">Find out more</a></li>
+		</ul>
+		</footer>
+		</section>
+		</div>
+		<div class="col-4 col-6-medium col-12-small">
+		<section class="box">
+		<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+		<header>
+		<h3>Noncebo Private School</h3>
+		</header>
+		<p>Noncebo, Lala and Bongeka will complete this section as soon as they get access to this repo. </p>
+	<footer>
+		<ul class="actions">
+		<li><a href="#" class="button alt">Find out more</a></li>
+		</ul>
+		</footer>
+		</section>
+		</div>
+		<div class="col-4 col-6-medium col-12-small">
+	<section class="box">
+		<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+		<header>
+		<h3>WeThinkCode Primary School</h3>
+		</header>
+		<p>Noncebo, Lala and Bongeka will complete this section as soon as they get access to this repo. </p>
+		<footer>
+		<ul class="actions">
+		<li><a href="#" class="button alt">Find out more</a></li>
+	</ul>
+		</footer>
+		</section>
+		</div>
+		<div class="col-4 col-6-medium col-12-small">
+		<section class="box">
+		<a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
+		<header>
+		<h3>Bongeka Primary School</h3>
+		</header>
+	<p>LNoncebo, Lala and Bongeka will complete this section as soon as they get access to this repo. </p>
 													<footer>
 														<ul class="actions">
 															<li><a href="#" class="button alt">Find out more</a></li>
